# Transformers_expt

Transformers/: .gitignore  Importnt_points.md  README.md  config.py  dataset.py  expt1.py  expt1_parallel.py  model.py  pyproject.toml  train.py  transformer_scratch.ipynb
Transformers/dataset/: tokenizer_en.json  tokenizer_it.json
Transformers/examples/: tokeniser.py  transformer_scratch.ipynb
